Files for all versions, order moves based on previous moves stats, issues: memory allocation and timeouts

--- a/Chess-Challenge/Chess-Challenge.csproj
+++ b/Chess-Challenge/Chess-Challenge.csproj
@@ -35,6 +35,15 @@
     <Compile Update="src\Evil Bot\EvilBotOriginal.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Update="src\My Bot\MyBotAlphaBetaComplexEval.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+    <Compile Update="src\My Bot\MyBotAlphaBetaSimpleEval.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+    <Compile Update="src\My Bot\MyBotMiniMaxSimpleEval.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
